--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,4 +9,6 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
-@import 'blocks/advant'
+@import 'blocks/advant';
+@import 'media';
+@import 'blocks/consultation';
