--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -5,6 +5,14 @@
             margin-top: 60px;
         }
     }  
+    .consultation {
+        .title_left {
+            font-size: 30px;
+        }
+    }
+    .feed-form {
+        margin-left: 40px;
+    }
 }
 @media (max-width: 991px) {
     .promo {
