--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,10 @@
 @import 'base/variables';
+@import 'base/mixins';
 * {
     font-family: 'Museo', sans-serif;
 }
 .container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
@@ -14,3 +16,5 @@
 @import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
